# distributed-db

./: CMakeLists.txt  LICENSE  README.md  gen_server_keys.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  base64.cpp  block.hpp  blockchain.hpp  crypto.hpp  network_api.hpp
src/node/: CMakeLists.txt  network.hpp  node.cpp
src/service/: CMakeLists.txt  service.cpp
src/user/: CMakeLists.txt  user.cpp
src/web_gui/ServerBlockChain/: README.md  angular.json  package-lock.json  package.json
src/web_gui/ServerBlockChain/e2e/: protractor.conf.js
src/web_gui/ServerBlockChain/e2e/src/: app.e2e-spec.ts
src/web_gui/ServerBlockChain/src/: index.html  karma.conf.js
src/web_gui/ServerBlockChain/src/app/: app.component.spec.ts  app.module.ts
src/web_gui/ServerBlockChain/src/app/server/: server.service.ts  service.component.css  service.component.html  service.component.ts
src/web_gui/UserBlockChain/: angular.json  package-lock.json  package.json
src/web_gui/UserBlockChain/e2e/src/: app.e2e-spec.ts
src/web_gui/UserBlockChain/src/: index.html  karma.conf.js
src/web_gui/UserBlockChain/src/app/: app-routing.module.ts  app.component.css  app.component.spec.ts  app.module.ts
src/web_gui/UserBlockChain/src/app/user/: user.component.css  user.component.html  user.component.ts  user.service.ts
